# lapwing

./: LICENSE.txt  README.rst  pyproject.toml  ruff.toml
src/lapwing/: cmd.py
src/lapwing/project_template/project_name/settings/: __init__.py  django.py  wagtail.py
